tests/neg/i22589b.check
-- Error: tests/neg/i22589b.scala:13:7 ---------------------------------------------------------------------------------
13 |object Person extends CompanionEssentials[Person]: // error
   |^
   |Cannot infer the implementation of the deferred given instance myc in trait CompanionEssentials
   |since the result is self-recursive. An implementing given needs to be written explicitly.
14 |  given String = "hw"
15 |  given myc(using String): MyCodec[Person] = new MyCodec[Person] {}
16 |  override def toString = ""
